manifests/nextcloud-microgateway-config/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  hostnames:
  - "nextcloud-127-0-0-1.nip.io"
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: airlock-gateway
    namespace: airlock-gateway
    sectionName: http
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: nextcloud
      namespace: nextcloud
      port: 8080
