manifests/nextcloud-microgateway-config/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  rules:
  - host: nextcloud-127-0-0-1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: airlock-nextcloud-gateway
            port:
              number: 8080
